// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectMetrics /> should render properly when data is available 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 32px;
}

.emotion-1 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.emotion-2 {
  min-width: 400px;
}

.emotion-2 th {
  text-align: left;
  vertical-align: bottom;
  color: #b3b3b3;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding: 8px;
  padding-left: 0;
}

.emotion-2 td {
  padding: 16px;
  padding-left: 0;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-3 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00bdc1;
  padding-right: 4px;
}

.emotion-5 {
  padding-right: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #808080;
  font-size: 14px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ebb52e;
}

.emotion-8 {
  padding-left: 4px;
  padding-right: 8px;
}

.emotion-9 {
  color: #8f89e7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  min-width: 300px;
}

.emotion-12 th {
  text-align: left;
  vertical-align: bottom;
  color: #b3b3b3;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding: 8px;
  padding-left: 0;
}

.emotion-12 td {
  padding: 16px;
  padding-left: 0;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-21 {
  font-size: 14px;
  line-height: 18px;
  color: #b3b3b3;
  padding-bottom: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h4>
      Usage
    </h4>
    <table
      className="emotion-2"
    >
      <thead>
        <tr>
          <th>
            File Type
          </th>
          <th>
            ML Usage
            <br />
            Internal Modules
          </th>
          <th>
            ML Usage
            <br />
            External Modules
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <svg
                className="emotion-5"
                data-file-name="documents.svg"
                height={24}
              />
              Documents*
            </div>
            <div
              className="emotion-6"
            >
              /
            </div>
            <div
              className="emotion-7"
            >
              <svg
                className="emotion-8"
                data-file-name="images.svg"
                height={24}
              />
              Images
            </div>
          </td>
          <td>
            2
          </td>
          <td>
            8
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              <svg
                className="emotion-5"
                data-file-name="videos.svg"
                height={24}
              />
              Video Hours
            </div>
          </td>
          <td>
            1
          </td>
          <td>
            1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="emotion-11"
  >
    <h4>
      Total Asset Storage
    </h4>
    <table
      className="emotion-12"
    >
      <thead>
        <tr>
          <th>
            <br />
            File Type
          </th>
          <th>
            Total 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <svg
                className="emotion-5"
                data-file-name="documents.svg"
                height={24}
              />
              Documents*
            </div>
            <div
              className="emotion-6"
            >
              /
            </div>
            <div
              className="emotion-7"
            >
              <svg
                className="emotion-8"
                data-file-name="images.svg"
                height={24}
              />
              Images
            </div>
          </td>
          <td>
            64
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              <svg
                className="emotion-5"
                data-file-name="videos.svg"
                height={24}
              />
              Video Hours
            </div>
          </td>
          <td>
            128
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="emotion-21"
  >
    *pages are processed & counted as individual assets
  </div>
</div>
`;

exports[`<ProjectMetrics /> should render properly when data is unavailable 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 32px;
}

.emotion-1 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.emotion-2 {
  min-width: 400px;
}

.emotion-2 th {
  text-align: left;
  vertical-align: bottom;
  color: #b3b3b3;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding: 8px;
  padding-left: 0;
}

.emotion-2 td {
  padding: 16px;
  padding-left: 0;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-3 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00bdc1;
  padding-right: 4px;
}

.emotion-5 {
  padding-right: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #808080;
  font-size: 14px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ebb52e;
}

.emotion-8 {
  padding-left: 4px;
  padding-right: 8px;
}

.emotion-9 {
  color: #8f89e7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  min-width: 300px;
}

.emotion-12 th {
  text-align: left;
  vertical-align: bottom;
  color: #b3b3b3;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding: 8px;
  padding-left: 0;
}

.emotion-12 td {
  padding: 16px;
  padding-left: 0;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-21 {
  font-size: 14px;
  line-height: 18px;
  color: #b3b3b3;
  padding-bottom: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h4>
      Usage
    </h4>
    <table
      className="emotion-2"
    >
      <thead>
        <tr>
          <th>
            File Type
          </th>
          <th>
            ML Usage
            <br />
            Internal Modules
          </th>
          <th>
            ML Usage
            <br />
            External Modules
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <svg
                className="emotion-5"
                data-file-name="documents.svg"
                height={24}
              />
              Documents*
            </div>
            <div
              className="emotion-6"
            >
              /
            </div>
            <div
              className="emotion-7"
            >
              <svg
                className="emotion-8"
                data-file-name="images.svg"
                height={24}
              />
              Images
            </div>
          </td>
          <td>
            unavailable**
          </td>
          <td>
            unavailable**
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              <svg
                className="emotion-5"
                data-file-name="videos.svg"
                height={24}
              />
              Video Hours
            </div>
          </td>
          <td>
            unavailable**
          </td>
          <td>
            unavailable**
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="emotion-11"
  >
    <h4>
      Total Asset Storage
    </h4>
    <table
      className="emotion-12"
    >
      <thead>
        <tr>
          <th>
            <br />
            File Type
          </th>
          <th>
            Total 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <svg
                className="emotion-5"
                data-file-name="documents.svg"
                height={24}
              />
              Documents*
            </div>
            <div
              className="emotion-6"
            >
              /
            </div>
            <div
              className="emotion-7"
            >
              <svg
                className="emotion-8"
                data-file-name="images.svg"
                height={24}
              />
              Images
            </div>
          </td>
          <td>
            unavailable**
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-9"
            >
              <svg
                className="emotion-5"
                data-file-name="videos.svg"
                height={24}
              />
              Video Hours
            </div>
          </td>
          <td>
            unavailable**
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="emotion-21"
  >
    *pages are processed & counted as individual assets
    <br />
    **usage is being calculated and is currently unavailable
  </div>
</div>
`;
